fix RT horiz alignment of logo/masthead and footer

--- a/src/SDCode.Web/wwwroot/css/site.css
+++ b/src/SDCode.Web/wwwroot/css/site.css
@@ -278,3 +278,8 @@ progress::-webkit-progress-value {
 progress::-webkit-progress-bar {
   background: #bdf1ff
 }
+
+/* override bootstrap */
+.form-row {
+  margin-right: 0;
+}
